# tlpi-dist

./: .gitignore  CMakeLists.txt  CMakeLists.txt.FreeBSD  README.md
acl/: CMakeLists.txt
altio/: CMakeLists.txt
cap/: CMakeLists.txt
cgroups/: CMakeLists.txt
daemons/: CMakeLists.txt
dirs_links/: CMakeLists.txt
filebuff/: CMakeLists.txt
fileio/: CMakeLists.txt
filelock/: CMakeLists.txt
files/: CMakeLists.txt  t_stat.c
filesys/: CMakeLists.txt
getopt/: CMakeLists.txt
inotify/: CMakeLists.txt
lib/: CMakeLists.txt  become_daemon.c  become_daemon.h  binary_sems.c  binary_sems.h  cap_functions.c  cap_functions.h  create_pid_file.c  create_pid_file.h  curr_time.c  curr_time.h  event_flags.c  event_flags.h  file_perms.c  file_perms.h  inet_sockets.c  inet_sockets.h  itimerspec_from_str.c  itimerspec_from_str.h  print_rlimit.c  print_rlimit.h  print_rusage.c  print_rusage.h  print_wait_status.c  print_wait_status.h  pty_fork.c  pty_fork.h  pty_master_open.c  pty_master_open.h  rdwrn.c  rdwrn.h  read_line.c  read_line.h  read_line_buf.c  read_line_buf.h  region_locking.c  region_locking.h  scm_functions.c  scm_functions.h  semun.h  (+11 more)
loginacct/: CMakeLists.txt
memalloc/: CMakeLists.txt
mmap/: CMakeLists.txt
namespaces/: CMakeLists.txt
pgsjc/: CMakeLists.txt
pipes/: CMakeLists.txt
pmsg/: CMakeLists.txt  pmsg_getattr.c
proc/: CMakeLists.txt
proccred/: CMakeLists.txt
procexec/: CMakeLists.txt  demo_clone.c
procpri/: CMakeLists.txt
procres/: CMakeLists.txt
progconc/: CMakeLists.txt
psem/: CMakeLists.txt
pshm/: CMakeLists.txt
pty/: CMakeLists.txt
seccomp/: CMakeLists.txt
shlibs/: CMakeLists.txt
signals/: CMakeLists.txt  nonreentrant.c
sockets/: CMakeLists.txt  t_gethostbyname.c  t_getservbyname.c
svipc/: CMakeLists.txt
svmsg/: CMakeLists.txt
svsem/: CMakeLists.txt  semun.h
svshm/: CMakeLists.txt
sysinfo/: CMakeLists.txt
syslim/: CMakeLists.txt
threads/: CMakeLists.txt
time/: CMakeLists.txt
timers/: CMakeLists.txt  ptmr_null_evp.c  ptmr_sigev_signal.c
tty/: CMakeLists.txt
users_groups/: CMakeLists.txt
vdso/: CMakeLists.txt
vmem/: CMakeLists.txt
xattr/: CMakeLists.txt
